--- a/css/main.css
+++ b/css/main.css
@@ -129,3 +129,42 @@ div#productviewinfo {
 div#productviewdesc p {
   text-align: justify;
 }
+
+/* Products Page */
+
+div#productscontainer {
+  display: block;
+  width: 90%;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 20px;
+  border: black 3px solid;
+}
+
+div.productsrow {
+  display: flex;
+  border: aqua 3px solid;
+  width: 90%;
+  margin: 20px auto 20px auto;
+}
+div.productsblock {
+  display: block;
+  width: 20%;
+  height: 350px;
+  margin: 10px auto 10px auto;
+  border: rgb(12, 12, 12) 3px solid;
+}
+div.productsimgbox {
+  display: block;
+  width: 90%;
+  height: 75%;
+  margin: 5px auto 5px auto;
+  border: green 2px solid;
+}
+div.productsimgbox img {
+  display: block;
+  width: 80%;
+  max-width: 200px;
+  max-height: 90%;
+  margin: 2px auto 2px auto;
+}
